--- a/index.html
+++ b/index.html
@@ -400,57 +400,22 @@
 			</div>
 		</div>
 		<script>
-const spreadsheetId = "1sWHNpRKK_N1cc9yU2Ik0ml8e7urPYtoTO2xwS4KZaew";
-const sheetId = "0";
-const range = "A:F";
-let rowsData = [];
+“const gameDetails = {
+				nation1: "New Zealand",
+				nation2: "Sri Lanka",
+				date: "December 26-29, 2014",
+				score: "New Zealand (T: 105) 441 & 107/2, Sri Lanka (f/o) 138 & 407; New Zealand won by 8 wickets",
+				crickdlequestion: "New Zealand player scored 195 in this match?"
+			};
 
-// Load the API client and authenticate
-gapi.load('client', function() {
-  gapi.client.init({
-    apiKey: 'AIzaSyDPqcMksAbP6xcW0Nx9J68xh4zowy2gU5A',
-    discoveryDocs: ['https://sheets.googleapis.com/$discovery/rest?version=v4'],
-  }).then(function() {
-    // Load data from the sheet
-    gapi.client.sheets.spreadsheets.values.get({
-      spreadsheetId: spreadsheetId,
-      range: range,
-    }).then(function(response) {
-      // Process the data
-      rowsData = response.result.values.slice(1); // skip header row
-      updateGameDetails();
-    });
-  });
-});
+			const correctPlayer = ["MCCULLUM"];
 
-// Update game details every minute
-setInterval(function() {
-  updateGameDetails();
-}, 60000);
 
-function updateGameDetails() {
-  // Randomly select a row
-  const randomIndex = Math.floor(Math.random() * rowsData.length);
-  const randomRow = rowsData.splice(randomIndex, 1)[0]; // remove row from array to prevent duplicate selection
-
-  // Update game details
-  const gameDetails = {
-    nation1: randomRow[0],
-    nation2: randomRow[1],
-    date: randomRow[2],
-    score: randomRow[3],
-    crickdlequestion: randomRow[4]
-  };
-  const correctPlayer = [randomRow[5]];
-
-  // Update HTML elements
-  document.getElementById("nation1").textContent = gameDetails.nation1;
-  document.getElementById("nation2").textContent = gameDetails.nation2;
-  document.getElementById("date").textContent = gameDetails.date;
-  document.getElementById("score").textContent = gameDetails.score;
-  document.getElementById("crickdlequestion").textContent = gameDetails.crickdlequestion;
-}
-
+document.getElementById("nation1").textContent = gameDetails.nation1;
+			document.getElementById("nation2").textContent = gameDetails.nation2;
+			document.getElementById("date").textContent = gameDetails.date;
+			document.getElementById("score").textContent = gameDetails.score;
+			document.getElementById("crickdlequestion").textContent = gameDetails.crickdlequestion;”
 			
 			const guessInputs = document.querySelectorAll(".guess-input");
 			const submitButtons = document.querySelectorAll("button[id^='submit']");
