--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
 			</div>
 		</div>
 		<script>
-“const gameDetails = {
+			const gameDetails = {
 				nation1: "New Zealand",
 				nation2: "Sri Lanka",
 				date: "December 26-29, 2014",
@@ -410,12 +410,11 @@
 
 			const correctPlayer = ["MCCULLUM"];
 
-
-document.getElementById("nation1").textContent = gameDetails.nation1;
+			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
 			document.getElementById("date").textContent = gameDetails.date;
 			document.getElementById("score").textContent = gameDetails.score;
-			document.getElementById("crickdlequestion").textContent = gameDetails.crickdlequestion;”
+			document.getElementById("crickdlequestion").textContent = gameDetails.crickdlequestion;
 			
 			const guessInputs = document.querySelectorAll(".guess-input");
 			const submitButtons = document.querySelectorAll("button[id^='submit']");
