--- a/index.html
+++ b/index.html
@@ -399,22 +399,57 @@
 				<p><b>Duck! The correct answer is <span id="correct-answer"></span>.</b></p>
 			</div>
 		</div>
+		 <button onclick="updateGame()">New Game</button>
 		<script>
-			const gameDetails = {
-				nation1: "New Zealand",
-				nation2: "Sri Lanka",
-				date: "December 26-29, 2014",
-				score: "New Zealand (T: 105) 441 & 107/2, Sri Lanka (f/o) 138 & 407; New Zealand won by 8 wickets",
-				crickdlequestion: "New Zealand player scored 195 in this match?"
-			};
+      // Your Google Sheets API Key
+      const apiKey = "AIzaSyDPqcMksAbP6xcW0Nx9J68xh4zowy2gU5A";
 
-			const correctPlayer = ["MCCULLUM"];
+      // Your Google Sheets Spreadsheet ID and Sheet ID
+      const spreadsheetId = "1sWHNpRKK_N1cc9yU2Ik0ml8e7urPYtoTO2xwS4KZaew";
+      const sheetId = 0;
 
-			document.getElementById("nation1").textContent = gameDetails.nation1;
-			document.getElementById("nation2").textContent = gameDetails.nation2;
-			document.getElementById("date").textContent = gameDetails.date;
-			document.getElementById("score").textContent = gameDetails.score;
-			document.getElementById("crickdlequestion").textContent = gameDetails.crickdlequestion;
+      // Array to keep track of previously selected rows
+      let selectedRows = [];
+
+      function updateGame() {
+        // Create a new Google Sheets API request object
+        const request = new XMLHttpRequest();
+
+        // Generate a random row number
+        let row;
+        do {
+          row = Math.floor(Math.random() * 988) + 1;
+        } while (selectedRows.includes(row));
+        selectedRows.push(row);
+
+        // Fetch data from the selected row
+        const url = `https://sheets.googleapis.com/v4/spreadsheets/${spreadsheetId}/values/${sheetId}!A${row}:F${row}?key=${apiKey}`;
+        request.open("GET", url);
+        request.send();
+        request.onload = () => {
+          if (request.status === 200) {
+            const data = JSON.parse(request.responseText).values[0];
+            const gameDetails = {
+              nation1: data[0],
+              nation2: data[1],
+              date: data[2],
+              score: data[3],
+              crickdlequestion: data[4],
+            };
+            const correctPlayer = [data[5]];
+
+            // Update the HTML content with the fetched data
+            document.getElementById("nation1").textContent = gameDetails.nation1;
+            document.getElementById("nation2").textContent = gameDetails.nation2;
+            document.getElementById("date").textContent = gameDetails.date;
+            document.getElementById("score").textContent = gameDetails.score;
+            document.getElementById("crickdlequestion").textContent = gameDetails.crickdlequestion;
+            document.getElementById("correctplayer").textContent = correctPlayer;
+          } else {
+            console.log("Error fetching data from Google Sheets API");
+          }
+        };
+      }
 			
 			const guessInputs = document.querySelectorAll(".guess-input");
 			const submitButtons = document.querySelectorAll("button[id^='submit']");
