--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 						<button class="popup-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup-content">
-						<p>Guess the cricketer who was 'Player of the Match' based on their stats in this game. You should enter the <b>surname</b> of the player you're guessing. If you misspell the name, the box will turn yellow, and if you get it wrong, the box will turn grey. You have four guesses in total. Good luck!</p>
+						<p>Guess the cricketer who was 'Player of the Match' based on their stats in this game. The game will accept any name the player is known by, but not their full name.<br>For example, if the answer is Shakib Al Hasan, the game will accept both 'Shakib' and 'Al Hasan' as correct<br>If you misspell the name, the box will turn yellow, and if you get it wrong, the box will turn grey. You have four guesses in total. Good luck!</p>
 					</div>
 				</div>
 			</div>
