--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 						<button class="popup-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup-content">
-						<p>Guess the cricketer who was 'Player of the Match' based on their stats in this game. The game will accept any name the player is known by.<br><br>For example, if the answer is Shakib Al Hasan, the game will accept both <b>'Shakib'</b> and <b>'Al Hasan'</b> as correct.<br><br>If you misspell the name, the box will turn <span style="color: #fcd40c"><b>yellow</b></span>, and if you get it wrong, the box will turn <span style="color: grey"><b>grey</b></span>. You have four guesses in total. Good luck!</p>
+						<p>Guess the cricketer who was 'Player of the Match' based on their stats in this game. The game will accept any name the player is known by.<br><br>For example, if the answer is Shakib Al Hasan, the game will accept both <b>'Shakib'</b> and <b>'Al Hasan'</b> as correct.<br><br>If you misspell the name, the box will turn <span style="color: #FF8200"><b>orange</b></span>, and if you get it wrong, the box will turn <span style="color: grey"><b>grey</b></span>. You have four guesses in total. Good luck!</p>
 					</div>
 				</div>
 			</div>
@@ -435,7 +435,7 @@
 						congratulationsElement.style.display = "block";
 						answerElement.style.display = "none";
 					} else if (isClose(guess, correctPlayer)) {
-						guessInput.style.backgroundColor = "#fcd40c";
+						guessInput.style.backgroundColor = "#FF8200";
 						guessInput.style.color = "white";
 						if (index < 3) {
 							guessInputs[index + 1].querySelector("input").disabled = false;
