--- a/index.html
+++ b/index.html
@@ -421,6 +421,8 @@
 			const answerElement = document.getElementById("answer");
 			const congratulationsElement = document.getElementById("congratulations");
 			const correctAnswerElement = document.getElementById("correct-answer");
+			
+			let numGuessesLeft = 4;
 
 			submitButtons.forEach((button, index) => {
 				button.addEventListener("click", (event) => {
@@ -429,6 +431,7 @@
 					const guess = guessInput.value;
 					guessInput.disabled = true;
 					button.disabled = true;
+					numGuessesLeft--;
 					if (correctPlayer.includes(guess)) {
 						guessInput.style.backgroundColor = "#1dc278";
 						guessInput.style.color = "white";
@@ -449,6 +452,15 @@
 					} else {
 						guessInput.style.backgroundColor = "grey";
 						guessInput.style.color = "white";
+						if (numGuessesLeft === 1) { // check if only one guess is left
+        const hint = document.createElement("div"); // create a hint element
+        hint.innerHTML = "Stumped? Click here for a hint."; // add the hint text
+        guessInputs[index].appendChild(hint); // add the hint element to the input container
+        hint.addEventListener("click", () => {
+          guessInput.value = correctPlayer[0][0]; // fill in the first letter of the correct player
+          guessInput.focus(); // focus on the input box
+        });
+      }
 						if (index < 3) {
 							guessInputs[index + 1].querySelector("input").disabled = false;
 							guessInputs[index + 1].querySelector("button").disabled = false;
