--- a/index.html
+++ b/index.html
@@ -459,19 +459,22 @@
 						}
 					}
 if (index === 2) {
-    const hintElement = document.createElement("div");
-    hintElement.style.color = "black";
-    hintElement.style.fontSize = "1.1rem";
-    hintElement.style.marginTop = "1rem";
-    hintElement.innerHTML = "Stumped? Click here for a hint.";
-    guessInputs[index + 1].appendChild(hintElement);
-    hintElement.addEventListener("click", (event) => {
-        event.preventDefault();
-        hintElement.style.display = "none";
-        const answerInput = guessInputs[index + 1].querySelector("input");
-        answerInput.value = correctPlayer[0][0];
-        answerInput.style.fontWeight = "bold";
-    });
+  const hintElement = document.createElement("div");
+  hintElement.style.color = "black";
+  hintElement.style.fontSize = "1.1rem";
+  hintElement.style.marginTop = "1rem";
+  hintElement.style.display = "block"; // add this line
+  hintElement.style.marginLeft = "auto"; // add this line
+  hintElement.style.marginRight = "auto"; // add this line
+  hintElement.innerHTML = "Stumped? Click here for a hint.";
+  guessInputs[index + 1].appendChild(hintElement);
+  hintElement.addEventListener("click", (event) => {
+    event.preventDefault();
+    hintElement.style.display = "none";
+    const answerInput = guessInputs[index + 1].querySelector("input");
+    answerInput.value = correctPlayer[0][0];
+    answerInput.style.fontWeight = "bold";
+  });
 }
 				});
 	
