--- a/index.html
+++ b/index.html
@@ -459,18 +459,14 @@
 						}
 					}
 if (index === 2) {
-  const hintContainer = document.createElement("div");
-  hintContainer.style.display = "flex";
-  hintContainer.style.flexDirection = "column";
-  hintContainer.style.alignItems = "center";
   const hintElement = document.createElement("div");
   hintElement.style.color = "black";
   hintElement.style.fontSize = "1.1rem";
   hintElement.style.marginTop = "1rem";
   hintElement.innerHTML = "Stumped? Click here for a hint.";
-  hintContainer.appendChild(guessInputs[index + 1]);
-  hintContainer.appendChild(hintElement);
-  guessInputs[index].parentNode.insertBefore(hintContainer, guessInputs[index + 1]);
+  guessInputs[index + 1].querySelector("input").style.display = "block";
+  guessInputs[index + 1].appendChild(document.createElement("br"));
+  guessInputs[index + 1].appendChild(hintElement);
   hintElement.addEventListener("click", (event) => {
     event.preventDefault();
     hintElement.style.display = "none";
