--- a/index.html
+++ b/index.html
@@ -464,15 +464,25 @@ if (index === 2) {
   hintElement.style.fontSize = "1.1rem";
   hintElement.style.marginTop = "1rem";
   hintElement.innerHTML = "Stumped? Click here for a hint.";
-  guessInputs[index + 1].querySelector("input").style.display = "block";
-  guessInputs[index + 1].appendChild(document.createElement("br"));
-  guessInputs[index + 1].appendChild(hintElement);
+  
+  const inputContainer = document.createElement("div");
+  inputContainer.style.display = "flex";
+  inputContainer.style.flexDirection = "column";
+  inputContainer.style.alignItems = "flex-start";
+  
+  const inputBox = guessInputs[index + 1].querySelector("input");
+  inputBox.style.display = "block";
+  
+  inputContainer.appendChild(inputBox);
+  inputContainer.appendChild(hintElement);
+  
+  guessInputs[index + 1].parentNode.insertBefore(inputContainer, guessInputs[index + 1]);
+  
   hintElement.addEventListener("click", (event) => {
     event.preventDefault();
     hintElement.style.display = "none";
-    const answerInput = guessInputs[index + 1].querySelector("input");
-    answerInput.value = correctPlayer[0][0];
-    answerInput.style.fontWeight = "bold";
+    inputBox.value = correctPlayer[0][0];
+    inputBox.style.fontWeight = "bold";
   });
 }
 				});
