--- a/index.html
+++ b/index.html
@@ -401,14 +401,14 @@
 		</div>
 		<script>
 			const gameDetails = {
-				nation1: "New Zealand",
-				nation2: "Sri Lanka",
-				date: "December 26-29, 2014",
-				score: "New Zealand (T: 105) 441 & 107/2, Sri Lanka (f/o) 138 & 407; New Zealand won by 8 wickets",
-				crickdlequestion: "New Zealand player scored 195 in this match?"
+				nation1: "Zimbabwe",
+				nation2: "Pakistan",
+				date: "Sep 1-5, 2011",
+				score: "Zimbabwe 412 & 141, Pakistan (T: 88) 466 & 88/3; Pakistan won by 7 wickets",
+				crickdlequestion: "Pakistan player scored 119 & 38 and took 4/31 in this match?"
 			};
 
-			const correctPlayer = ["MCCULLUM"];
+			const correctPlayer = ["HAFEEZ"];
 
 			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
