--- a/index.html
+++ b/index.html
@@ -473,6 +473,12 @@
 							answerInput.value = correctPlayer[0][0];
 							answerInput.style.fontWeight = "bold";
 						});
+						
+						 const submitButton = document.getElementById("submit-3");
+    submitButton.addEventListener("click", (event) => {
+        hintElement.style.display = "none";
+    });
+						
 					}
 				});
 	
