--- a/index.html
+++ b/index.html
@@ -474,8 +474,7 @@
 							answerInput.style.fontWeight = "bold";
 						});
 						
-						 const submitButton = document.getElementById("submit-3");
-    submitButton.addEventListener("click", (event) => {
+    submitButtons.addEventListener("click", (event) => {
         hintElement.style.display = "none";
     });
 						
