--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
 							answerInput.style.fontWeight = "bold";
 						});
 						
-    const submitButton = document.getElementById("submit");
+    const submitButton = document.getElementById("submit4");
     submitButton.addEventListener("click", (event) => {
         hintElement.style.display = "none";
     });
