--- a/index.html
+++ b/index.html
@@ -410,15 +410,22 @@
 
 			const correctPlayer = ["HAFEEZ"];
 			
-			const playedGameKey = "playedGame";
-const storedGameData = localStorage.getItem(playedGameKey);
-let hasPlayedGame = false;
-
-if (storedGameData) {
-  const gameData = JSON.parse(storedGameData);
-  if (gameData.gameDetails === JSON.stringify(gameDetails) && gameData.correctPlayer === JSON.stringify(correctPlayer)) {
-    hasPlayedGame = true;
-  }
+const hasPlayed = sessionStorage.getItem("hasPlayed");
+if (hasPlayed === "true") {
+    const guess1 = sessionStorage.getItem("guess1");
+    const guess2 = sessionStorage.getItem("guess2");
+    const guess3 = sessionStorage.getItem("guess3");
+    const result = sessionStorage.getItem("result");
+    guessInputs[0].querySelector("input").value = guess1;
+    guessInputs[1].querySelector("input").value = guess2;
+    guessInputs[2].querySelector("input").value = guess3;
+    answerElement.style.display = "block";
+    if (result === "win") {
+        congratulationsElement.style.display = "block";
+        answerElement.style.display = "none";
+    } else {
+        correctAnswerElement.textContent = correctPlayer[0];
+    }
 }
 
 			document.getElementById("nation1").textContent = gameDetails.nation1;
@@ -445,6 +452,7 @@ if (storedGameData) {
 						guessInput.style.color = "white";
 						congratulationsElement.style.display = "block";
 						answerElement.style.display = "none";
+						sessionStorage.setItem('hasPlayed', true);
 					} else if (isClose(guess, correctPlayer)) {
 						guessInput.style.backgroundColor = "#c8b653";
 						guessInput.style.color = "white";
@@ -455,6 +463,7 @@ if (storedGameData) {
 						} else {
 							answerElement.style.display = "block";
 							correctAnswerElement.textContent = correctPlayer[0];
+							sessionStorage.setItem('hasPlayed', true);
 						}
 					
 					} else {
@@ -467,6 +476,7 @@ if (storedGameData) {
 						} else {
 							answerElement.style.display = "block";
 							correctAnswerElement.textContent = correctPlayer[0];
+							sessionStorage.setItem('hasPlayed', true);
 						}
 					}
 					
