--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 						<button class="popup2-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup2-content">
-						<p>Crickdle is a love letter to Test cricket.<br><br>Please send any enquiries to ayushsanghavi13 [at] gmail [dot] com</p>
+						<p>Crickdle is a love letter to Test cricket. There's a new cricketer to guess every day.<br><br>Please send any enquiries to ayushsanghavi13 [at] gmail [dot] com</p>
 					</div>
 				</div>
 			</div>
@@ -393,10 +393,10 @@
 				<button id="submit4" disabled><b>ENTER</b></button>
 			</div>
 			<div id="congratulations" style="display:none">
-				<p><b>Bowled em'! You got the correct answer.</b></p>
+				<p><b>Bowled 'im! You got the correct answer.</b> Come back tomorrow to guess another cricketer.</p>
 			</div>
 			<div id="answer" style="display:none">
-				<p><b>Duck! The correct answer is <span id="correct-answer"></span>.</b></p>
+				<p><b>Duck! The answer is <span id="correct-answer"></span>.</b> Come back tomorrow to guess another cricketer.</p>
 			</div>
 		</div>
 		<script>
@@ -474,10 +474,10 @@
 							answerInput.style.fontWeight = "bold";
 						});
 						
-    const submitButton = document.getElementById("submit4");
-    submitButton.addEventListener("click", (event) => {
-        hintElement.style.display = "none";
-    });
+						const submitButton = document.getElementById("submit4");
+						submitButton.addEventListener("click", (event) => {
+							hintElement.style.display = "none";
+						});
 						
 					}
 				});
