--- a/index.html
+++ b/index.html
@@ -479,6 +479,11 @@
 							hintElement.style.display = "none";
 						});
 						
+						const submitButton = document.getElementById("submit3");
+						submitButton.addEventListener("click", (event) => {
+							hintElement.style.display = "none";
+						});
+						
 					}
 				});
 	
