--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 						<button class="popup-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup-content">
-						<p>Guess the cricketer who was 'Player of the Match' based on their stats in this game. You should enter the <b>surname</b> of the player you're guessing. If you misspell the name, the box will turn <span style="color: #c8b653"><b>yellow</b></span>, and if you get it wrong, the box will turn <span style="color: #787c7f"><b>grey</b></span>. You have four guesses in total. Good luck!</p>
+						<p>Guess the cricketer who was 'Player of the Match' based on their stats in this game.<br><br>You should enter the <b>surname</b> of the player you're guessing. If you misspell the name, the box will turn <span style="color: #c8b653"><b>yellow</b></span>, and if you get it wrong, the box will turn <span style="color: #787c7f"><b>grey</b></span>.<br><br>You have four guesses in total. <b>Good luck!</b></p>
 					</div>
 				</div>
 			</div>
