--- a/index.html
+++ b/index.html
@@ -474,11 +474,16 @@
 							answerInput.style.fontWeight = "bold";
 						});
 						
-						const submitButton = document.getElementById("submit4");
-						const submitButton = document.getElementById("submit3");
-						submitButton.addEventListener("click", (event) => {
-							hintElement.style.display = "none";
-						});
+						const submitButton1 = document.getElementById("submit4");
+const submitButton2 = document.getElementById("submit3");
+
+submitButton1.addEventListener("click", (event) => {
+  hintElement.style.display = "none";
+});
+
+submitButton2.addEventListener("click", (event) => {
+  hintElement.style.display = "none";
+});
 						
 					}
 				});
