--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
 						}
 					}
 					
-					if (index === 2) {
+					if (index === 2 && answerElement.style.display === "none" && congratulationsElement.style.display === "none") {
 						const hintElement = document.createElement("div");
 						hintElement.style.color = "black";
 						hintElement.style.fontSize = "1.1rem";
