--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 						<button class="popup-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup-content">
-						<p>Based on their stats in the match, guess the cricketer who was 'Player of the Match' in 4 tries.<br><ul><li>Each guess should be the <b>surname</b> of the player you're guessing.</li><li>The colour of the box will change to show how close your guess is.</li></ul>If you misspell the name, the box will turn <span style="color: #c8b653"><b>yellow</b></span>, and if you get it wrong, the box will turn <span style="color: #787c7f"><b>grey</b></span>.</p>
+						<p>Based on their stats in the match, guess the cricketer who was 'Player of the Match'. You have 4 tries.<br><ul><li>Each guess should be the <b>surname</b> of the player you're guessing.</li><li>The colour of the box will change to show how close your guess is.</li></ul>If you misspell the name, the box will turn <span style="color: #c8b653"><b>yellow</b></span>, and if you get it wrong, the box will turn <span style="color: #787c7f"><b>grey</b></span>.</p>
 					</div>
 				</div>
 			</div>
@@ -364,7 +364,7 @@
 						<button class="popup2-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup2-content">
-						<p>Crickdle is a love letter to Test cricket. There's a new cricketer to guess every day.<br><br>Please send any enquiries to ayushsanghavi13 [at] gmail [dot] com</p>
+						<p>Crickdle is a love letter to Test cricket. There's a new cricketer to guess every day.<br><br>Please send any enquiries about Crickdle to ayushsanghavi13 [at] gmail [dot] com</p>
 					</div>
 				</div>
 			</div>
@@ -393,10 +393,10 @@
 				<button id="submit4" disabled><b>ENTER</b></button>
 			</div>
 			<div id="congratulations" style="display:none">
-				<p><b>Bowled 'im! You got the correct answer.</b><br>Come back tomorrow to guess another cricketer.</p>
+				<p><b>Bowled 'im! You got the correct answer.</b><br><span style="color: black">Come back tomorrow to guess another cricketer.</span></p>
 			</div>
 			<div id="answer" style="display:none">
-				<p><b>Duck! The answer is <span id="correct-answer"></span>.</b><br>Come back tomorrow to guess another cricketer.</p>
+				<p><b>Duck! The answer is <span id="correct-answer"></span>.</b><br><span style="color: black">Come back tomorrow to guess another cricketer.</span></p>
 			</div>
 		</div>
 		<script>
