--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 						<button class="popup-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup-content">
-						<p>Based on their stats in the match, guess the cricketer who was 'Player of the Match'. You have 4 tries.<br><ul><li>Each guess should be the <b>surname</b> of the player you're guessing.</li><li>The colour of the box will change to show how close your guess is.</li></ul>If you misspell the name, the box will turn <span style="color: #e4a404"><b>orange</b></span>, and if you get it wrong, the box will turn <span style="color: #787c7f"><b>grey</b></span>.</p>
+						<p>Based on their stats in this game, guess the cricketer who was 'Player of the Match'. You have 4 tries.<br><ul><li>Each guess should be the <b>surname</b> of the player you're guessing.</li><li>The colour of the box will change to show how close your guess is.</li></ul>If you misspell the name, the box will turn <span style="color: #e4a404"><b>orange</b></span>, and if you get it wrong, the box will turn <span style="color: #787c7f"><b>grey</b></span>.</p>
 					</div>
 				</div>
 			</div>
@@ -401,14 +401,14 @@
 		</div>
 		<script>
 			const gameDetails = {
-				nation1: "Zimbabwe",
-				nation2: "Pakistan",
-				date: "Sep 1-5, 2011",
-				score: "Zimbabwe 412 & 141, Pakistan (T: 88) 466 & 88/3; Pakistan won by 7 wickets",
-				crickdlequestion: "Pakistan player scored 119 & 38 and took 4/31 in this match?"
+				nation1: "Australia",
+				nation2: "England",
+				date: "Nov 23-27, 2006",
+				score: "Australia 602/9d & 202/1d, England (T: 648) 157 & 370; Australia won by 277 runs",
+				crickdlequestion: "Australia player scored 196 & 60* in this match?"
 			};
 
-			const correctPlayer = ["HAFEEZ"];
+			const correctPlayer = ["PONTING"];
 
 			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
