--- a/index.html
+++ b/index.html
@@ -328,25 +328,25 @@
 				font-family: Arial, sans-serif;
 			}
 			
-			.popup2-share {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  bottom: 16px;
-  left: 0;
-  right: 0;
+			.share-container {
+  margin-top: 20px;
+  text-align: center;
 }
 
-.popup2-share-button {
-	margin-top: 20px;
+.share-button {
   background-color: #1dc278;
   color: white;
   border: none;
-  border-radius: 4px;
   padding: 8px 16px;
+  border-radius: 4px;
   cursor: pointer;
   font-size: 16px;
+  font-weight: bold;
+  font-family: Arial, sans-serif;
+}
+
+.share-button:hover {
+  opacity: 0.8;
 }
 			
 			.toolbar-help img,
@@ -387,9 +387,9 @@
 					<div class="popup2-content">
 						<p>Crickdle is a love letter to Test cricket. There's a new cricketer to guess every day.<br><br>Please send any enquiries about Crickdle to ayushsanghavi13 [at] gmail [dot] com</p>
 					</div>
-					<div class="popup2-share">
-      <button class="popup2-share-button">Share</button>
-    </div>
+					 <div class="share-container">
+        <button class="share-button">Share</button>
+      </div>
 				</div>
 			</div>
 		</header>
@@ -540,7 +540,7 @@
 				popup2Background.style.display = 'flex';
 			});
 			
-			const shareButton = document.querySelector('.popup2-share-button');
+			const shareButton = document.querySelector('.share-button');
 
 shareButton.addEventListener('click', function() {
   const shareText = 'I’m playing Crickdle, a daily cricket guessing game. Join me at crickdle.com and test your knowledge!';
