--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
 			const shareButton = document.querySelector('.share-button');
 
 shareButton.addEventListener('click', function() {
-  const shareText = 'I’m playing Crickdle, a daily cricket guessing game. Join me at crickdle.com and test your knowledge!';
+  const shareText = 'I’m playing Crickdle, a daily cricket guessing game. Join me and test your knowledge!';
   const shareUrl = 'https://crickdle.com';
   const shareTitle = 'Crickdle';
   navigator.share({
